--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -26,7 +26,7 @@
         <ion-datetime displayFormat="MMM DD, YYYY" max="2056" [(ngModel)]="conferenceDate"></ion-datetime>
       </ion-item>
 
-      <ion-item>
+      <!-- <ion-item>
         <ion-icon name="pin" item-start></ion-icon>
         <ion-label>Location</ion-label>
         <ion-select>
@@ -35,7 +35,7 @@
           <ion-option value="chicago">Chicago, IL</ion-option>
           <ion-option value="seattle">Seattle, WA</ion-option>
         </ion-select>
-      </ion-item>
+      </ion-item> -->
     </ion-list>
 
     <p>
