--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -3,21 +3,25 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>About</ion-title>
+    <ion-title>Spot Train</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="presentPopover($event)">
         <ion-icon name="more"></ion-icon>
       </button>
     </ion-buttons>
   </ion-navbar>
+  <ion-toolbar no-border-top>
+    <ion-searchbar color="primary"
+                   [(ngModel)]="queryText"
+                   (ionInput)="updateSchedule()"
+                   placeholder="Train Number">
+    </ion-searchbar>
+  </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="about-header">
-    <img src="assets/img/ionic-logo-white.svg" alt="ionic logo">
-  </div>
   <div padding class="about-info">
-    <h4>Ionic Conference</h4>
+    <h4>Spot Live Train Location</h4>
 
     <ion-list no-lines>
       <ion-item>
