--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -6,11 +6,11 @@
 
     <ion-segment [(ngModel)]="segment" (ionChange)="updateSchedule()">
       <ion-segment-button value="all">
-        All
+        Rail
       </ion-segment-button>
-      <ion-segment-button value="favorites">
+      <!-- <ion-segment-button value="favorites">
         Favorites
-      </ion-segment-button>
+      </ion-segment-button> -->
     </ion-segment>
 
     <ion-buttons end>
@@ -74,7 +74,7 @@
       No Sessions Found
   </ion-list-header>
 
-  <ion-fab bottom right #fab>
+  <!-- <ion-fab bottom right #fab>
     <button ion-fab><ion-icon name="share"></ion-icon></button>
     <ion-fab-list side="top">
       <button ion-fab color="vimeo" (click)="openSocial('Vimeo', fab)"><ion-icon name="logo-vimeo"></ion-icon></button>
@@ -82,7 +82,7 @@
       <button ion-fab color="twitter" (click)="openSocial('Twitter', fab)"><ion-icon name="logo-twitter"></ion-icon></button>
       <button ion-fab color="facebook" (click)="openSocial('Facebook', fab)"><ion-icon name="logo-facebook"></ion-icon></button>
     </ion-fab-list>
-  </ion-fab>
+  </ion-fab> -->
 
 
 </ion-content>
